# simplify-python

./: Dockerfile  Makefile  README  main.py  pyproject.toml  source_code_simplifier.py
.github/: dependabot.yml
.github/workflows/: workflow.yml
docs/: index.html  index.py  index.toml  style.css
docs/prm/: main.py  pyscript.toml
python/: main.py  pyproject.toml
python/prm/: after.py  before.py
tests/: forbid_single_letter_variable_names.py
