[project]
name = "source-code-simplifier"
version = "0.0.1"
authors = [{name = "Paschalis Bizopoulos"}]
description = "A tool to automatically simplify python source code."
license = {text = "MIT"}
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/pbizopoulos/source-code-simplifier"

[project.scripts]
source_code_simplifier = "source_code_simplifier:main"

[tool.setuptools]
py-modules = ["source_code_simplifier"]
include-package-data = false
