[project]
dependencies = [
  "fire==0.5.0"
]
name = "simplify-python"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.4.3",
  "djlint==1.34.1",
  "mypy==1.8.0",
  "ruff==0.3.0",
  "ssort==0.12.4",
  "toml-sort==0.23.1"
]

[project.scripts]
simplify_python = "main:main"

[tool.setuptools]
py-modules = ["main"]
